# thefilter

./: .dockerignore  .env.example  .gitignore  .infisical.json  CLAUDE.md  CONTRIBUTING.md  Dockerfile  EDITORIAL_SETUP.md  GITHUB_SETUP_REFERENCE.md  LICENSE  LOCAL_CI_SETUP.md  Makefile  README.md  REQUIREMENTS.md  TESTING_PROTOCOL.md  check_briefing.md  check_briefing.py  debug_combined_prompt.py  debug_detailed.py  debug_editorial.py  debug_final_newsletter.md  debug_free_models.py  debug_llama_combined.py  debug_llm_interactions.py  debug_simple.py  docker-compose.yml  example_custom_voice.py  github-infisical-setup.md  index.html  newsletter_final.md  newsletter_preview.md  newsletter_production.md  newsletter_rewrite.md  newsletter_summary.txt  publish_direct.py  pyproject.toml  requirements.txt  test_editorial_workflow.py  test_newsletter.py  warm_readwise_cache.py
.cache/: content_cache.db
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: approval-processor.yml  ci.yml  daily-content-check.yml  editorial-approval.yml  email-notifications.yml  manual-trigger.yml  newsletter.yml  publish-approved-newsletter.yml  publish-newsletter.yml  publish-static-newsletter.yml
debug/: README.md  debug_combined_prompt.py  debug_detailed.py  debug_editorial.py  debug_free_models.py  debug_llama_combined.py  debug_llm_interactions.py  debug_simple.py
docs/: check_briefing.md
scheduler/: scheduler.py
scripts/: __init__.py  check_briefing.py  ci-checks.py  detailed_analysis.py  fetch_draft.py  install-hooks.py  local-ci.py  local-qa-pipeline.py  pre-commit-checks.py  test-ci.sh
src/: newsletter_bot.py
tests/: conftest.py  test_check_briefing.py  test_cli.py  test_editorial_workflow.py  test_infisical.py  test_integration.py  test_models.py  test_newsletter.py  test_newsletter_quality.py  test_sanitizer.py  test_settings.py  test_source_detection.py  test_utils.py
web/: app.py
(+37 files in other folders)
